# LectureLog

./: .env.example  .gitignore  Dockerfile  Dockerfile.bot  README.md  audiopreproc  docker-compose.yml  fastinit.md  go.mod  pyproject.toml
bot/: handlers.py  main.py
cli/: main.py
docs/: 2026-02-16-mvp-implementation.md
docs/plans/: 2026-02-11-LectureLog-design.md  2026-02-12-audiopreproc-module.md  2026-02-12-audiopreproc-v2-codex.md  2026-02-12-audiopreproc-v2.md  2026-02-12-deepfilternet-migration.md  2026-02-12-silence-removal-codex.md  2026-02-16-mvp-pipeline-codex.md  2026-02-16-mvp-pipeline.md  2026-03-30-groq-key-pool.md  2026-04-01-gemini-model-fallback.md
lecturelog/: __init__.py  config.py  models.py  srt.py
lecturelog/llm/: __init__.py  gemini.py  key_pool.py
lecturelog/pipeline/: __init__.py  audio_cut.py  export.py  runner.py  slides.py  structurize.py  transcribe.py
pkg/audiopreproc/: audiopreproc.go  audiopreproc_test.go  denoise.go  denoise_test.go  ffmpeg.go  ffmpeg_test.go  normalize.go  normalize_test.go  pipeline.go  pipeline_test.go  preset.go  preset_test.go  silence.go  silence_test.go
prompts/: section_v1.md  slide_match_v1.md  split_v1.md
scripts/: .env.example  __init__.py  prompt_max_fidelity.md  structurize.py  summary_quality_eval.py  transcribe.py
scripts/tests/: test_summary_quality_eval.py
server/: app.py  routes.py  task_manager.py
tests/: test_api.py  test_audio_cut.py  test_config_models.py  test_export.py  test_key_pool.py  test_slides.py  test_srt.py  test_structurize.py  test_transcribe.py
(+2 files in other folders)
